# CascadedEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
CAAssets/Models/: VikingRoom.mesh
CAAssets/Shaders/: finalBlitShader.shaderbundle  generalVertexShader.shaderbundle  imgui.shaderbundle  testShader.shaderbundle
CACore/: CMakeLists.txt
CACore/header/: CAUtils.h  DebugUtils.h  FileLoader.h  Hasher.h  Macros.h  Platform.h  Reflection.h  Serialization.h  ThreadSafePool.h  library_loader.h  uenum.h  uhash.h
CACore/private/: EASTL_Implementations.cpp  FileLoader.cpp
CAResources/Models/: VikingRoom.fbx
CAResources/Shaders/: CameraData.hslang  FinalBlit.slang  GlobalDirectLighting.hslang  Imgui.slang  InstancedStaticMesh.hslang  MeshMaterial.hslang  TestComputeShader.slang  TestSlang.slang  TestStaticMeshShader.slang  finalBlitShader.hlsl  generalVertexShader.hlsl  imgui.hlsl  (+3 more)
CMake/: ExternalProjects.cmake
CoreTests/: CMakeLists.txt  SerializerTest.cpp
DotNetHost/: CMakeLists.txt
DotNetHost/private/: CSharpHost.cpp
ExternalLib/: CMakeLists.txt
GeneralResources/: CMakeLists.txt
GeneralResources/header/: IResource.h  ResourceImporter.h  ResourceImportingSystem.h  ResourceManagingSystem.h
GeneralResources/header/CAResource/: IResource.h  ResourceImporter.h  ResourceImportingSystem.h  ResourceManagingSystem.h  ResourceSystemFactory.h
GeneralResources/private/: ResourceImportingSystem.cpp
ImguiDisplayManager/: CMakeLists.txt
RenderInterface/: CMakeLists.txt
RenderInterface/header/: CCommandList.h  CNativeRenderPassInfo.h  CPipelineStateObject.h  CRenderBackend.h  CRenderGraph.h  CVertexInputDescriptor.h  Common.h  GPUBuffer.h  GPUBufferHandle.h  GPUBufferHandleInl.h  GPUFrame.h  GPUGraph  GPUGraph.h  GPUGraphHandleBase.h  GPUTexture.h  IMeshInterface.h  LayoutBuilder.h  MonitorHandle.h  RenderInterfaceManager.h  ShaderArgList.h  ShaderBindingBuilder.h  ShaderBindingSet.h  ShaderBindingSetHandle.h  ShaderBindingSetHandleInl.h  ShaderProvider.h  ShaderResourceHandle.h  TextureHandle.h  TextureHandleInl.h  TextureSampler.h  WindowHandle.h
RenderInterface/private/: CRenderGraphImpl.cpp  CRenderGraphImpl.h  GPUBufferData.cpp  GPUBufferData.h  RenderInterfaceManager_Impl.cpp  RenderInterfaceManager_Impl.h  ShaderBindingSetData.cpp  ShaderBindingSetData.h  ShaderBindingSetHandle.cpp  ShaderConstantSetData.cpp  ShaderConstantSetData.h  ShaderConstantSetDataLayout.cpp  ShaderConstantSetDataLayout.h  TextureInternalData.cpp  TextureInternalData.h  framework.h  pch.h
ShaderCompiler/: CMakeLists.txt
ShaderCompiler/header/: Compiler.h
ShaderCompiler/private/: Compiler.cpp
ShaderCompilerSlang/: CMakeLists.txt
ShaderCompilerSlang/header/: Compiler.h
ShaderCompilerSlang/private/: Compiler.cpp
ShaderProcessor/: CMakeLists.txt  Main.cpp
ThreadManager/: CMakeLists.txt
ThreadManager/header/: ThreadManager.h
ThreadManager/private/: TaskNode.cpp  TaskNode.h  TaskNodeGeneral.cpp  TaskNodeGeneral.h  ThreadManager_Impl.cpp  ThreadManager_Impl.h  framework.h  pch.h
TimerSystem/: CMakeLists.txt
TimerSystem/header/CATimer/: Timer.h
TimerSystem/private/: Timer.cpp
TimerSystem_Impl/: CMakeLists.txt
TimerSystem_Impl/header/TimerSystemEditor/: TimerSystem_Editor.h  TimerSystem_Impl.h
TimerSystem_Impl/private/: TimerSystem_Editor.cpp  TimperSystem_Impl.cpp
VulkanRenderBackend/: CMakeLists.txt
VulkanRenderBackend/private/: CRenderBackend_Vulkan.h  CRenderBakend_Vulkan.cpp  CShaderModuleObject.h  CShaderModule_Vulkan.cpp  CVulkanApplication.cpp  CVulkanApplication.h  CVulkanBufferObject.cpp  CVulkanBufferObject.h  CVulkanMemoryManager.cpp  CVulkanMemoryManager.h  CVulkanThreadContext.cpp  CVulkanThreadContext.h  CommandList_Impl.cpp  CommandList_Impl.h  Containers.h  DescriptorSetLayoutObject.cpp  FrameCountContext.cpp  FrameCountContext.h  FramebufferObject.cpp  FramebufferObject.h  GPUBuffer_Impl.cpp  GPUBuffer_Impl.h  GPUObjectManager.cpp  GPUObjectManager.h  GPUTexture_Impl.cpp  GPUTexture_Impl.h  HashPool.h  IUploadingResource.cpp  IUploadingResource.h  InterfaceTranslator.h  MRenderBackendImpl_Vulkan.cpp  RenderBackendSettings.h  RenderGraphExecutor.cpp  RenderGraphExecutor.h  RenderPassObject.cpp  RenderPassObject.h  ResourceUsageInfo.cpp  ResourceUsageInfo.h  ShaderBindingSet_Impl.cpp  ShaderBindingSet_Impl.h  (+28 more)
VulkanRenderBackend/private/DescriptorAllocation/: DescriptorLayoutPool.cpp  DescriptorLayoutPool.h
VulkanRenderBackend/private/GPUContexts/: FrameContext.cpp  FrameContext.h  QueueContext.cpp  QueueContext.h
VulkanRenderBackend/private/GPUGraphExecutor/: GPUGraphExecutor.cpp  GPUGraphExecutor.h  ShaderBindingHolder.cpp  ShaderBindingHolder.h
VulkanRenderBackend/private/GPUObject/: ComputePipelineObject.cpp  ComputePipelineObject.h
VulkanRenderBackend/private/GPUResources/: GPUResource.h  GPUResourceInternal.h  VKGPUBuffer.h  VKGPUTexture.h
VulkanRenderBackend/private/ResourcePool/: CommandBuffersPool.cpp  CommandBuffersPool.h  FrameBoundResourcePool.cpp  FrameBoundResourcePool.h  GPUMemoryManager.cpp  GPUMemoryManager.h  GPUResourceObjectManager.cpp  GPUResourceObjectManager.h  GraphExecutorManager.cpp  GraphExecutorManager.h  ResourceReleaseQueue.cpp  ResourceReleaseQueue.h
VulkanRenderBackend/private/Utilities/: SubobjectTraits.h
VulkanRendererBackendTester/: CMakeLists.txt
VulkanRendererBackendTester/private/: Camera.cpp  Camera.h  GLMReflectionCommon.h  IMGUIContext.cpp  IMGUIContext.h  IMGUIIncludes.h  IconsFontAwesome4.h  JoltTest.cpp  KeyCodes.h  Main.cpp  MeshRenderer.cpp  MeshRenderer.h  MiniDump.cpp  MiniDump.h  Monster.fbs  Monster_generated.h  Profiler.cpp  Profiler.h  ProfilerWindow.cpp  SerializationLog.h  ShaderResource.cpp  ShaderResource.h  StaticMeshResource.cpp  StaticMeshResource.h  TestShaderProvider.cpp  TestShaderProvider.h  TextureResource.cpp  TextureResource.h  imgui_impl_cascade.cpp  stb_impl.cpp
WindowSystem/: CMakeLists.txt
WindowSystem/header/CAWindow/: WindowSystem.h
WindowSystem/private/: GLFWInclude.h  WindowSystem_Impl.cpp  WindowSystem_Impl.h  Window_Impl.cpp  Window_Impl.h
(+27 files in other folders)
